--- a/package.json
+++ b/package.json
@@ -43,9 +43,10 @@
 		"argon2": "^0.44.0",
 		"axios": "^1.12.2",
 		"bullmq": "^5.58.7",
+		"cidr-matcher": "^2.1.1",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.2",
-		"nestjs-monobank": "^1.2.0",
+		"nestjs-monobank": "^1.2.3",
 		"passport": "^0.7.0",
 		"passport-jwt": "^4.0.1",
 		"prisma": "^6.16.2",
